--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "1.0.0",
   "description": "XPL bridge for openkarotz",
   "bin": {
-  	"xpl-openkarotz": "./bin/xpl-openkarotz"
+    "xpl-openkarotz": "./bin/xpl-openkarotz"
   },
   "dependencies": {
-	  "xpl-api": ">=1.0.13",
-	  "commander": "~2.3",
-	  "debug": "latest",
-	  "openkarotz": "latest",
-	  "semaphore": "latest",
-	  "uuid": "latest"
+    "commander": "~2.3",
+    "debug": "latest",
+    "openkarotz": "latest",
+    "timeout-semaphore": "latest",
+    "uuid": "latest",
+    "xpl-api": ">=1.0.13"
   },
   "keywords": [
     "XPL",
-    "xmpp", "hangout"
+    "xmpp",
+    "hangout"
   ],
   "files": [
     "xpl-openkarotz.js",
     "bin/xpl-openkarotz"
-	],
-  "repository": { "type": "git", "url": "https://github.com/oeuillot/xpl-openkarotz.git" },
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oeuillot/xpl-openkarotz.git"
+  },
   "author": "Olivier Oeuillot",
   "license": "GPL",
   "readmeFilename": "README.md"
